overflow added to body to fix header

--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -20,6 +20,10 @@
 	}
 }
 
+body {
+	overflow-y: hidden;
+}
+
 .c-select {
 	&::after {
 		content: url('../assets/dropdown.png');
